<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="com.example.ryan.qwiktix.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lEmail"
        android:backgroundTint="@color/gold"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/cursor_color"
        android:hint="email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/gold"
        android:ems="10"
        android:layout_below="@+id/lEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lPassword"
        android:textColorHint="@color/grey"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textCursorDrawable="@drawable/cursor_color"
        android:hint="password" />

    <ImageButton
        android:src="@drawable/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lLoginButton"
        android:layout_below="@+id/lPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:src="@drawable/registerbuttton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lRegisterLink"
        android:layout_below="@+id/lLoginButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:src="@drawable/resetbutton"
        android:id="@+id/lResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lRegisterLink"
        android:text="Reset Password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hawk"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/lResetPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
