<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ryan.qwiktix.HomePageActivity"
    >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/homeList"
                    android:layout_below="@+id/textView"/>

        </FrameLayout>

        <include
            layout="@layout/bottom_navigation_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            />

</LinearLayout>