<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="com.example.ryan.qwiktix.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rFirstName"
        android:backgroundTint="@color/gold"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="First Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/rLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rEmail"
        android:backgroundTint="@color/gold"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/rEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rPassword"
        android:backgroundTint="@color/gold"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/rPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rPasswordConfirm"
        android:backgroundTint="@color/gold"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Retype Password" />

    <ImageButton
        android:src="@drawable/registerbuttton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rSubmitButton"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/rPasswordConfirm"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/rLastName"
        android:hint="Last Name"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/gold"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_below="@+id/rFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hawk"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/rSubmitButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
